# tkk---Universal_Validator_Software

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SOFTWARE_ARCHITECTURE_DOCUMENT.md  SRS_IEEE_tkk-UniversalValidator.md  cliff.toml  prompt.txt
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/anomaly/: __init__.py  base.py  detectors.py  service.py
backend/app/api/: router.py
backend/app/config/: profiles.py  settings.py
backend/app/connectors/: __init__.py  base.py  catalog.py  errors.py  factory.py  implementations.py  loader.py  pipeline.py  registry.py  sdk.py
backend/app/core/: application.py  celery_app.py  constants.py  db.py  dev_seed.py  lifecycle.py  logging.py  openapi.py  redis.py  (+2 more)
backend/docs/: API_ADMIN_USER_MANAGEMENT.md  API_BASELINE.md  API_CONFIGURATION_MANAGEMENT.md  ARCHITECTURE_BACKEND_FOUNDATION.md  CONFIGURATION_MANAGEMENT.md  CONNECTOR_PLUGIN_SDK.md  DEVELOPER_GUIDE.md  EXECUTION_ENGINE_FRAMEWORK.md  REPORT_GENERATOR.md  RESULT_STORAGE_ENGINE.md  SCHEDULER_ORCHESTRATION.md  SECURITY_AUTH_MODULE.md  SWAGGER_AUTH.md  UNIVERSAL_CONNECTOR_FRAMEWORK.md  UNIVERSAL_VALIDATION_FRAMEWORK.md  USER_MANAGEMENT_MODULE.md  VALIDATOR_PLUGIN_SDK.md  YAML_WORKFLOW_ENGINE.md
backend/examples/: connector_template.py  execution_profile_example.yaml  validator_template.py  workflow_execution_example.yaml
backend/results/: wf-sql-transform-20260630140957171189.json  wf-sql-transform-20260630141809840639.json  wf-sql-transform-20260630141809843966.html  wf-sql-transform-report-20260630141221718249.html  wf-sql-transform-report-20260630141221718249.json  wf-sql-transform-report-20260630141221720666.html  wf-sql-transform-report-20260630141221720666.json  wf-sql-transform-report-20260630141809841912.html  wf-sql-transform-report-20260630141809841912.json  wf-sql-transform-report-20260630141809844401.html  wf-sql-transform-report-20260630141809844401.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
(+225 files in other folders)
