[package]
name = "tkk-universal-validator"
version = "1.0.0"
description = "TKK Universal Validator Desktop Application"
authors = ["tkk-UniversalValidator Engineering"]
license = "Proprietary"
edition = "2021"

[lib]
name = "tkk_universal_validator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
